--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,9 +33,12 @@
       <section id="main_content">
         {{ content }}
       </section>
-      <hr>
+    </div>
+    
+    <hr>
+    
+    <div class="container">
       <p>This cheatsheet was created by <b>Rafael Urben</b>. Found a mistake? Feel free to create a <a href="https://github.com/rafaelurben/linux-cheatsheet/pulls/">PR</a> or open an <a href="https://github.com/rafaelurben/linux-cheatsheet/issues/">issue</a> on GitHub!</p>
     </div>
-
   </body>
 </html>
